<resources>
    <!-- Main Application Title -->
    <string name="app_name">Sound Pressure Level Meter</string>

    <!-- Main Menu Buttons -->
    <string name="button_spl_graph_name">SPL Graph</string>
    <string name="button_spl_meter_name">SPL Meter</string>
    <string name="button_raw_data_graph_name">Raw Data</string>
    <string name="button_calibration_name">Calibration</string>

    <!-- App Bar Menu Items -->
    <string name="app_bar_menu_screenshots">Screenshots</string>
    <string name="app_bar_menu_settings">Settings</string>
    <string name="app_bar_menu_help">Help</string>

    <!-- SPL Meter Activity Layout Items -->
    <string name="drawable_linst_field_description">Linst [dB]</string>
    <string name="drawable_leq_field_description">Leq [dB]</string>
    <string name="drawable_lmin_field_description">Lmin [dB]</string>
    <string name="drawable_lmax_field_description">Lmax [dB]</string>
    <string name="textview_linst_field_placeholder_value">0.0</string>

    <!-- Calibration Activity Layout Items -->
    <string name="progressbar_octave_band_125Hz_description">125 Hz progressbar</string>
    <string name="progressbar_octave_band_250Hz_description">250 Hz progressbar</string>
    <string name="progressbar_octave_band_500Hz_description">500 Hz progressbar</string>
    <string name="progressbar_octave_band_1000Hz_description">1000 Hz progressbar</string>
    <string name="progressbar_octave_band_2000Hz_description">2000 Hz progressbar</string>
    <string name="progressbar_octave_band_4000Hz_description">4000 Hz progressbar</string>
    <string name="progressbar_octave_band_8000Hz_description">8000 Hz progressbar</string>
    <string name="progressbar_octave_band_16000Hz_description">16000 Hz progressbar</string>

    <string name="imagebutton_down_125Hz_description">Button down 125 Hz</string>
    <string name="imagebutton_down_250Hz_description">Button down 250 Hz</string>
    <string name="imagebutton_down_500Hz_description">Button down 500 Hz</string>
    <string name="imagebutton_down_1000Hz_description">Button down 1000 Hz</string>
    <string name="imagebutton_down_2000Hz_description">Button down 2000 Hz</string>
    <string name="imagebutton_down_4000Hz_description">Button down 4000 Hz</string>
    <string name="imagebutton_down_8000Hz_description">Button down 8000 Hz</string>
    <string name="imagebutton_down_16000Hz_description">Button down 16000 Hz</string>

    <string name="imagebutton_up_125Hz_description">Button up 125 Hz</string>
    <string name="imagebutton_up_250Hz_description">Button up 250 Hz</string>
    <string name="imagebutton_up_500Hz_description">Button up 500 Hz</string>
    <string name="imagebutton_up_1000Hz_description">Button up 1000 Hz</string>
    <string name="imagebutton_up_2000Hz_description">Button up 2000 Hz</string>
    <string name="imagebutton_up_4000Hz_description">Button up 4000 Hz</string>
    <string name="imagebutton_up_8000Hz_description">Button up 8000 Hz</string>
    <string name="imagebutton_up_16000Hz_description">Button up 16000 Hz</string>

    <string name="textview_calibration_linst_placeholder_value">90</string>
    <string name="textview_calibration_constant_placeholder_value">0</string>
    <string name="textview_calibration_parameter">Linst [dB] per octave band</string>

    <string name="textview_octave_band_center_frequency_125Hz">125 Hz</string>
    <string name="textview_octave_band_center_frequency_250Hz">250 Hz</string>
    <string name="textview_octave_band_center_frequency_500Hz">500 Hz</string>
    <string name="textview_octave_band_center_frequency_1000Hz">1000 Hz</string>
    <string name="textview_octave_band_center_frequency_2000Hz">2000 Hz</string>
    <string name="textview_octave_band_center_frequency_4000Hz">4000 Hz</string>
    <string name="textview_octave_band_center_frequency_8000Hz">8000 Hz</string>
    <string name="textview_octave_band_center_frequency_16000Hz">16000 Hz</string>

    <!-- Measurement Menu Items -->
    <string name="action_return_to_main_menu">Back</string>
    <string name="action_take_screenshot">Take screenshot</string>

    <!-- Settings Activity Titles -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="meas_settings_header">Measurement settings</string>
    <string name="meas_settings_calibration_header">Calibration correction values</string>

    <!-- Measurement Settings Preferences -->
    <string name="window_title">Window Function</string>
    <string name="weightings_title">Measurement Weightings</string>

    <!-- Measurement Settings Calibration correction values -->
    <string name="calibration_125Hz_title">Correction value 125 Hz</string>
    <string name="calibration_250Hz_title">Correction value 250 Hz</string>
    <string name="calibration_500Hz_title">Correction value 500 Hz</string>
    <string name="calibration_1000Hz_title">Correction value 1000 Hz</string>
    <string name="calibration_2000Hz_title">Correction value 2000 Hz</string>
    <string name="calibration_4000Hz_title">Correction value 4000 Hz</string>
    <string name="calibration_8000Hz_title">Correction value 8000 Hz</string>
    <string name="calibration_16000Hz_title">Correction value 16000 Hz</string>

    <!-- Miscellaneous -->
    <string name="placeholder_string">Work in progress</string>
    <string name="screenshot_captured">Captured screenshot. Go to device\'s gallery to view it</string>

</resources>